--- a/app/src/main/res/layout/fragment_jobinfo.xml
+++ b/app/src/main/res/layout/fragment_jobinfo.xml
@@ -17,6 +17,7 @@
             android:layout_marginStart="2dp"
             android:layout_marginEnd="1dp"
             android:layout_marginBottom="72dp"
+            android:src="@drawable/car0"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/vehicleImage3"
@@ -29,6 +30,7 @@
             android:layout_height="180dp"
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="72dp"
+            android:src="@drawable/car1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/vehicleImage4"
             app:layout_constraintStart_toStartOf="parent"
@@ -42,6 +44,7 @@
             android:layout_marginStart="2dp"
             android:layout_marginTop="43dp"
             android:layout_marginEnd="1dp"
+            android:src="@drawable/car2"
             app:layout_constraintBottom_toTopOf="@+id/vehicleImage4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/vehicleImage1"
@@ -54,6 +57,7 @@
             android:layout_height="180dp"
             android:layout_marginTop="43dp"
             android:layout_marginEnd="2dp"
+            android:src="@drawable/car3"
             app:layout_constraintBottom_toTopOf="@+id/vehicleImage3"
             app:layout_constraintEnd_toStartOf="@+id/vehicleImage2"
             app:layout_constraintStart_toStartOf="parent"
@@ -64,14 +68,14 @@
             android:id="@+id/jobinfoVehicle"
             android:layout_width="371dp"
             android:layout_height="68dp"
-            android:layout_marginStart="21dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="19dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
             android:text="Vehicle"
+            android:textColor="#000000"
             android:textSize="40dp"
-            app:layout_constraintBottom_toTopOf="@+id/jobinfoType"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -82,9 +86,8 @@
             android:layout_marginStart="21dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="161dp"
-            android:layout_marginBottom="13dp"
             android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/jobinfoAddress"
+            android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/jobinfoVehicle" />
@@ -94,11 +97,10 @@
             android:layout_width="225dp"
             android:layout_height="36dp"
             android:layout_marginStart="21dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="27dp"
             android:layout_marginEnd="165dp"
-            android:layout_marginBottom="4dp"
             android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/jobinfoCustomer"
+            android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/jobinfoType" />
@@ -108,9 +110,10 @@
             android:layout_width="225dp"
             android:layout_height="38dp"
             android:layout_marginStart="21dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="165dp"
             android:text="TextView"
+            android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/jobinfoAddress" />
